// Generated by github.com/davyxu/tabtoy
// Version: 2.8.10
// DO NOT EDIT!!

package table;


// Defined in table: Activity_signinBase
message Activity_signinBase
{	
	
	
	repeated Activity_signinDefine Activity_signin = 1; // Activity_signin

}

// Defined in table: Activity_signin
message Activity_signinDefine
{	
	
	
	optional int32 Id = 1; 
	
	
	optional int32 ActivityId = 2; 
	
	
	optional int32 SubId = 3; 
	
	
	optional int32 Day = 4; 
	
	
	optional int32 AwardId = 5; 
	
	
	optional int32 PilePrize = 6; 

}

